# architecture-portfolio

./: .env  .gitignore  Dockerfile  Makefile  pcconfig.py  pyproject.toml
iac/: compute.tf  load_balancer.tf  locals.tf  variables.tf
iac/resources/: services.txt
includes/: gcloud.mk  iac.mk
portfolio/: constants.py  helpers.py  navbar.py  portfolio.py  state.py
portfolio/pages/: __init__.py  footer.py  index.py  project.py  projects.py
scripts/: pynecone.sh
