[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["JeremyLG <jeremy.le-gall@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynecone = "^0.1.14"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
